fixed spacing issues on contact page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,6 +183,9 @@ text-decoration: none;
   margin-bottom: 1vh
 }
 
+#lastbutt {
+  margin-bottom: 2vh;
+}
 
 .navigation-bar:hover{
   width:11vw;
@@ -201,6 +204,10 @@ text-decoration: none;
     display: inline-block;
     opacity: 0;
     transition: all 0.15s;
+  }
+
+  #lastbutt {
+    margin-bottom: 5px;
   }
 
   .navigation-bar a {
@@ -904,8 +911,8 @@ color: white;
 }
 
 .input-container {
-  padding-left: 1.5vw;
   padding-right: 1.5vw;
+  padding-left: 1.5vw;
     display: -ms-flexbox; /* IE10 */
     display: flex;
     width: 100%;
